[package]
name = "surreal_bot"
version = "0.5.1"
edition = "2021"
authors = [
    "Raphael Darley <raphael.darley@surrealdb.com>",
    "alyti <alticodes@gmail.com>",
]

[dependencies]
anyhow = "1.0.89"
cargo-lock = "9.0.0"
async-channel = "2.3.1"
dotenvy = "0.15.7"
humantime = "2.1.0"
memorable-wordlist = "0.1.7"
once_cell = "1.18.0"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = { default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
], version = "0.11.6" }
surrealdb = { version = "2.0.1", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.40.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.28"
