[package]
name = "surreal_bot"
version = "0.7.1"
edition = "2021"
authors = [
    "Raphael Darley <raphael.darley@surrealdb.com>",
    "alyti <alticodes@gmail.com>",
]

[dependencies]
anyhow = "1.0.95"
cargo-lock = "10.0.1"
async-channel = "2.3.1"
dotenvy = "0.15.7"
humantime = "2.1.0"
memorable-wordlist = "0.1.7"
serde = "1.0.217"
serde_json = "1.0.135"
serenity = { default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "unstable_discord_api",
], version = "0.11.6" }
surrealdb = { version = "2.1.4", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
time = { version = "0.3.37", features = ["local-offset"] }
google-sheets4 = "6.0.0"
